[package]
name = "rust-wiper"
version = "0.2.0"
edition = "2021"
authors = ["Thomas Sautier <thomas.sautier@samhan.fr>"]
description = "Safe disk wiper CLI + GUI (Rust) — cross-platform prototype (dry-run default)"
license = "MIT"

[features]
default = []
gui = ["dep:eframe", "dep:rfd"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.10"
which = "4.4"

# GUI dependencies (eframe/egui)
eframe = { version = "0.23", optional = true }
rfd = { version = "0.9", optional = true } # file dialogs

[[bin]]
name = "rust-wiper-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "rust-wiper-gui"
path = "src/bin/gui.rs"
required-features = ["gui"]
